[package]
name = "adsbdb"
version = "0.2.3"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "aircraft & flightroute api"
repository = "https://github.com/mrjackwills/adsbdb"
homepage = "https://www.adsbdb.com"
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.6"
dotenvy = "0.15"
http-body = "0.4"
once_cell = "1.18"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["brotli","cookies","gzip","json","multipart","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version ="0.6", features = ["macros", "offline", "postgres", "runtime-tokio-rustls", "time"] }
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }

[profile.release]
lto = 'thin'
codegen-units = 1
panic = 'abort'
strip=true
debug = false


