[package]
name = "adsbdb"
version = "0.3.4"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "aircraft & flightroute api"
repository = "https://github.com/mrjackwills/adsbdb"
homepage = "https://www.adsbdb.com"
license = "MIT"
rust-version = "1.82.0"
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
enum_glob_use = "deny"
expect_used = "warn"
todo = "warn"
unused_async = "warn"
unwrap_used = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

[dependencies]
axum = "0.7"
dotenvy = "0.15"
fred = { version = "9.2" }
http-body = "1.0"
mimalloc = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"cookies",
	"gzip",
	"json",
	"multipart",
	"rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
	"macros",
	"postgres",
	"runtime-tokio-rustls",
	"time",
] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
